Added more javadoc memory.